# ROKO

./: docker-compose.yml
backend/: Dockerfile  package-lock.json  package.json
backend/src/: index.ts
backend/src/routes/: auth.ts
cpp-services/: CMakeLists.txt  Dockerfile
cpp-services/protos/: roko.proto
cpp-services/src/: MatchingEngine.cpp  MatchingEngine.h  PricingEngine.cpp  PricingEngine.h  main.cpp
database/: package-lock.json  package.json
database/prisma/: schema.prisma
frontend/: Dockerfile
frontend/src/app/: globals.css  page.tsx
frontend/src/app/dashboard/admin/: page.tsx
frontend/src/app/dashboard/analytics/: page.tsx
frontend/src/app/dashboard/client/: page.tsx
frontend/src/app/dashboard/worker/: page.tsx
